miscTests/export_tests/invalid/fn_missing_arg_annotation.ml

let%export some (a:int) (b:int) c: string = "hello"


